Attempted Fix of projects overlap

--- a/styles.css
+++ b/styles.css
@@ -67,23 +67,25 @@ button
 .Skypunk
 {
     width: 375px;
-    height: 800px;
+    height: 350px;
     display: inline-block;
     text-align: center;
+    padding-right: 20px;
 }
 
 .SkypunkArena
 {
     width: 375px;
-    height: 800px;
+    height: 350px;
     display: inline-block;
     text-align: center;
+    padding-right: 20px;
 }
 
 .BeastTag
 {
     width: 375px;
-    height: 800px;
+    height: 350px;
     display: inline-block;
     text-align: center;
 }
@@ -103,8 +105,7 @@ button
 .projects
 {
     display: flex;
+    justify-content: center;
     flex-direction: row;
-    align-items: center;
-    margin-inline: auto;
-    align-items: left 50%;
+    margin-top: 20px;
 }
